--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@ El Deutsche Tourenwagen Masters, también conocido como DTM, es un campeonato de
 
 <style>
 body{
-color: black;
+color: gold;
 
 }
 
