--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@ El Deutsche Tourenwagen Masters, también conocido como DTM, es un campeonato de
 
 <style>
 body{
-color: gold;
+color: black;
 
 }
 
@@ -62,7 +62,7 @@ body{
 background-image: url();
 }
 body{
-background-color: yellowgreen;
+background-color: gold;
 }
 
 
