--- a/index.html
+++ b/index.html
@@ -1,11 +1,11 @@
 <html>
 <head>
     <title>MERCEDES-BENZ</title>
-    
+    <img src="img-1.jpg" height="40"width="60" ALIGN="RIGHT">
 </head>
 <body>
    <H1>LA HISTORIA DE MERCEDES Y SU EVOLUCIÓN</H1>
-    < <center>img src="img-1.jpg" height="40"width="60" ALIGN="RIGHT"</center> >
+
 <p> <H4><center>ESTE ES SU COMIENZO...</center></H4>
     <center>La historia de Mercedes Benz comenzó a finales del siglo XIX y está íntimamente ligada al origen mismo del automóvil. Además, está asociada a dos grandes nombres: Karl Benz y Gottlieb Daimler, visionarios que vieron el potencial de un nuevo medio de transporte y comenzaron a trabajar para hacerlo realidad.
 
@@ -30,7 +30,7 @@ El Deutsche Tourenwagen Masters, también conocido como DTM, es un campeonato de
 
 <h5>PARA VER UN VIDEO SOBRE LAS CARRERAS DTM PINCHE <a href="https://www.youtube.com/watch?v=1oAswh9k4yk">AQUÍ </a></h5>
 
-<H5>PARA VER UN VIDEO DE COMO UN PILOTO DE F1 LLEGA A LO MAS ALTO PULSE <a href="https://www.youtube.com/watch?v=dNwMtZIN-hY"> AQUÍ </a> (LEWIS HAMILTONACTUAL PILOTO DE MERCEDES)</H5>
+<H5>PARA VER UN VIDEO DE COMO UN PILOTO DE F1 LLEGA A LO MAS ALTO PULSE <a href="https://www.youtube.com/watch?v=dNwMtZIN-hY"> AQUÍ </a> (LEWIS HAMILTON ACTUAL PILOTO DE MERCEDES)</H5>
 
 <H5>PARA UNA MAYOR INFORMACIÓN SOBRE LA HISTORIA DE MERCEDES PULSE <a href="https://www.autobild.es/coches/mercedes/historia">  AQUÍ</a></H5>
 
