--- a/index.html
+++ b/index.html
@@ -1,10 +1,10 @@
 <html>
 <head>
     <title>MERCEDES-BENZ</title>
-      <img src="img-1.jpg" height="40"width="60" ALIGN="RIGHT">
+    <img src="img-1.jpg" height="40"width="60" ALIGN="RIGHT">
+    
 </head>
 <body>
- 
    <H1>LA HISTORIA DE MERCEDES Y SU EVOLUCIÓN</H1>
 <p> <H4><center>ESTE ES SU COMIENZO...</center></H4>
     <center>La historia de Mercedes Benz comenzó a finales del siglo XIX y está íntimamente ligada al origen mismo del automóvil. Además, está asociada a dos grandes nombres: Karl Benz y Gottlieb Daimler, visionarios que vieron el potencial de un nuevo medio de transporte y comenzaron a trabajar para hacerlo realidad.
@@ -21,8 +21,40 @@
 <h4><center>MERCEDES EN LA ACTUALIDAD...</center></h4> <p><center> Hoy en día, Mercedes, es una marca que simboliza el lujo, la innovación, el confort, la deportividad...
     Mercedes, a demás de ser una marca de "LUJO" es una marca que participa en muchísimos eventos deportivos como la F1, los DTM y otros muchos eventos importantes.
 El Deutsche Tourenwagen Masters, también conocido como DTM, es un campeonato de automovilismo de velocidad que se disputa en Alemania desde el año 2000.</center></p>
-<img src="img-7.jpg" height="200" width="280"ALIGN="RIGHT">
-<img src="img-6.jpg" height="200" width="280"ALIGN="RIGHT" >
+<img src="img-7.jpg" height="160" width="200"ALIGN="RIGHT">
+<img src="img-6.jpg" height="160" width="200"ALIGN="RIGHT" >
+
+<H4>ACERCA DE SUS GANANCIAS</H4>
+<P>En 2021, la empresa automovilística alemana ingresó aproximadamente 168.000 millones de euros, lo que supuso un crecimiento de más de 13.600 millones con respecto a la cifra registrada durante el año anterior.
+</P>
+&nbsp; <h4>MEJORES COCHES DE MERCEDES</h4>
+<P><center>Estos son algunos de los mejores coches Mercedes jamás creados, y que desafían la tecnología, el lujo, velocidad y la potencia.
+    Mercedes Clase G. ...
+    Mercedes CLS W219. ...
+    Mercedes 500E. ...
+    Mercedes SL R129. ...
+    Mercedes McLaren SLR. ...
+    Mercedes CLK AMG GTR. ...
+    Mercedes C63 AMG W204. ...
+    Mercedes 300SL.</center></P>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 
 <H3>PARA MÁS INFORMACIÓN...</H3>
 
@@ -30,7 +62,7 @@ El Deutsche Tourenwagen Masters, también conocido como DTM, es un campeonato de
 
 <h5>PARA VER UN VIDEO SOBRE LAS CARRERAS DTM PINCHE <a href="https://www.youtube.com/watch?v=1oAswh9k4yk">AQUÍ </a></h5>
 
-<H5>PARA VER UN VIDEO DE COMO UN PILOTO DE F1 LLEGA A LO MAS ALTO PULSE <a href="https://www.youtube.com/watch?v=dNwMtZIN-hY"> AQUÍ </a> (LEWIS HAMILTON ACTUAL PILOTO DE MERCEDES)</H5>
+<H5>PARA VER UN VIDEO DE COMO UN PILOTO DE F1 LLEGA A LO MAS ALTO PULSE <a href="https://www.youtube.com/watch?v=dNwMtZIN-hY"> AQUÍ </a> (LEWIS HAMILTONACTUAL PILOTO DE MERCEDES)</H5>
 
 <H5>PARA UNA MAYOR INFORMACIÓN SOBRE LA HISTORIA DE MERCEDES PULSE <a href="https://www.autobild.es/coches/mercedes/historia">  AQUÍ</a></H5>
 
@@ -59,10 +91,10 @@ color: black;
 <style>
 
 body{
-background-image: url();
+background-image: url(img-8.jpg);
 }
 body{
-background-color:peachpuff;
+background-color: burlywood;
 }
 
 
@@ -73,6 +105,8 @@ background-color:peachpuff;
 
 
 </body>
+
+
 
 
 
